<resources>
    <string name="app_name">MisTareas2</string>
    <string name="boton_hechas">Hechas</string>
    <string name="boton_pendientes">Pendientes</string>
    <string name="nombre">Nombre</string>
    <string name="descripci_n">Descripción</string>
    <string name="fecha">Fecha</string>
    <string name="prioridad">Prioridad</string>
    <string name="coste">Coste</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="borrar">Borrar</string>
    <string name="nuevaTarea">Nueva Tarea</string>
    <string name="ListaDeTareas">Lista de Tareas</string>
    <string name="add_task">Add Task</string>
    <string name="descripci_n_actividad">Descripción_Actividad</string>
    <string name="fecha_actividad">Fecha_Actividad</string>
    <string name="urgencia_actividad">Urgencia_Actividad</string>
    <string name="precio_actividad">Precio_Actividad</string>
    <string name="volver">Volver</string>
    <string name="infoTarea">Tarea</string>
    <string name="nombre_actividad">Nombre_Actividad</string>
    <string name="info">info</string>
</resources>