<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/botonVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nombre_actividad"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="85dp" />

        <TextView
            android:id="@+id/textoDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/descripci_n_actividad"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="187dp" />

        <TextView
            android:id="@+id/textoFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fecha_actividad"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="315dp" />

        <TextView
            android:id="@+id/textoUrgencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/urgencia_actividad"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="411dp" />

        <TextView
            android:id="@+id/textoPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/precio_actividad"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="518dp" />

    </LinearLayout>


    <Button
        android:id="@+id/botonVolver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#0D4853"
        android:onClick="cancelarInfo"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>